# Proof-of-Arcade

./: .gitignore  CLAUDE.md  Cargo.toml  agee-genesis.toml
AgeeChain/: Cargo.toml
crates/block/: Cargo.toml
crates/block/src/: block.rs  block_tests.rs  header.rs  lib.rs  merkle.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: attestation.rs  attestation_tests.rs  finality.rs  lib.rs  validator_set.rs  voting.rs
crates/floor_proof/: Cargo.toml
crates/floor_proof/src/: lib.rs  maze_floor.rs  maze_rules.rs  prng.rs  proof.rs  reward.rs  validation.rs  validation_result.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: balance.rs  grant.rs  lib.rs  supply.rs
crates/node/: Cargo.toml
crates/node/src/: api.rs  api_tests.rs  attestation_verifier.rs  executor.rs  executor_tests.rs  lib.rs  mempool.rs  persistence.rs  runtime.rs  state.rs  verified_claim.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: account.rs  claim_key.rs  coin.rs  hash.rs  ids.rs  lib.rs  signature.rs
crates/tx/: Cargo.toml
crates/tx/src/: burn.rs  claim_floor.rs  error.rs  lib.rs  transaction.rs  transfer.rs
