[workspace]
members = [
    "crates/primitives",
    "crates/ledger",
    "crates/floor_proof",
    "crates/tx",
    "crates/block",
    "crates/consensus",
    "crates/node",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jeremie Agee <jeremieagee@gmail.com>"]
license = "MIT"
repository = "https://github.com/AgeeGaming/Proof-Of-Arcade"

[profile.release]
opt-level = 3
lto = true
