[package]
name = "agee-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agee"
path = "src/main.rs"

[dependencies]
agee-node = { path = "../node" }
agee-primitives = { path = "../primitives" }
agee-ledger = { path = "../ledger" }
serde_json = "1.0"
