[package]
name = "agee-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agee-node"
path = "src/main.rs"

[dependencies]
agee-node = { path = "../node" }
agee-primitives = { path = "../primitives" }
agee-ledger = { path = "../ledger" }
agee-tx = { path = "../tx" }
agee-consensus = { path = "../consensus" }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
