[package]
name = "agee-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agee-primitives = { path = "../primitives" }
agee-block = { path = "../block" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
