[package]
name = "agee-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agee-primitives = { path = "../primitives" }
agee-ledger = { path = "../ledger" }
agee-block = { path = "../block" }
agee-tx = { path = "../tx" }
agee-consensus = { path = "../consensus" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
